--- a/Css/index.css
+++ b/Css/index.css
@@ -24,7 +24,7 @@ body  {
   width: 250px;
   height: 100%;
   background-color: #01152C;
-  transition: all 0.7 ease;
+  transition:all 0.7s ease;
 }
 
 .sidebar header {
@@ -81,16 +81,34 @@ label #cancel {
   font-size: 25px;
   color:#EAEBED;
   padding: 6px 8px;
-  transition: all 0.7 ease;
+  transition: all 0.7s ease;
 }
 
 #cancel {
   /* Set Cancel Button inital postion & display */
   z-index: 1111;
-  left: 220px;
+  left: -220px;
   top: 5px;
   font-size: 25px;
   color:#EAEBED;
   padding: 2px 5px;
-  transition: all 0.7 ease;
+  transition: all 0.7s ease;
 }
+
+#check:checked ~ .sidebar {
+  /* Repositions sidebar on check */
+  left: 0;
+}
+
+#check:checked ~ label #btn {
+  /* Hides and disables open button when Nav is open */
+  left: 250px;
+  opacity: 0;
+  pointer-events: none;
+}
+
+#check:checked ~ label #cancel {
+  /* Repositions cancel button along with sidebar on open */
+  left: 220px;
+}
+
