--- a/Css/index.css
+++ b/Css/index.css
@@ -12,6 +12,25 @@ body  {
   font-family: 'Domine', sans-serif;
 }
 
+/* **********
+  BACKGROUND
+********** */
+
+#myVideo {
+  /* Set video to 100% width and height */
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.content {
+  /* set content to start at top of window */
+  position: fixed;
+  top: 0;
+}
+
 
 /* **********
   SIDEBAR
@@ -111,4 +130,8 @@ label #cancel {
   /* Repositions cancel button along with sidebar on open */
   left: 220px;
 }
+
+/* **********
+  MAIN
+********** */
 
