--- a/Css/index.css
+++ b/Css/index.css
@@ -167,8 +167,9 @@ footer a {
   /* configure text gradiant */
   background-color: #EAEBED;
   color: #EAEBED;
-  background-image: linear-gradient(45deg, #EAEBED, #747474);
+  background-image: linear-gradient(45deg, #ffffff, #747474);
   background-size: 100%;
+  background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
