--- a/Css/index.css
+++ b/Css/index.css
@@ -200,7 +200,7 @@ footer a {
 
 .intro-box button {
   color: white;
-  -webkit-text-fill-color: #EAEBED;
+  -webkit-text-fill-color: rgb(234, 235, 237);
   -moz-text-fill-color: #EAEBED;
   background-color: transparent;
   border: 2px solid #EAEBED;
@@ -251,9 +251,6 @@ footer a {
   padding-left: 20px;
 }
 .indent-three {
-  padding-left: 30px;
-}
-.indent-four {
   padding-left: 50px;
 }
 
@@ -262,22 +259,23 @@ footer a {
   font-size: 50px;
 }
 
-.education-list h3 {
-  margin-left: 80px;
-}
-
 .education-list li{
  margin: 10px 10px 10px 150px;
 }
 
-#bio-intro {
+#bio-box {
   font-size: 30px;
 }
 
-#bio-intro p {
+#bio-box h3 {
+  margin-left: 80px;
+}
+
+#bio-box p {
   padding-left: 35px;
 }
-#bio-intro h2 {
+
+#bio-box h2 {
   padding-left: 20px;
 }
 
@@ -287,4 +285,26 @@ footer a {
   margin-left: 40px;
   margin-top: 50px;
   margin-bottom: 30px;
+}
+
+#references {
+  border-collapse: collapse;
+  font-size: 15px;
+  max-width: 600px;
+  margin-left: 150px;
+}
+
+#references td, #references th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#references tr:nth-child(even){background-color: rgb(234, 235, 237, 0.5);}
+
+#references th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(92, 163, 250, 0.7);
+  color: white;
 }
