--- a/Css/index.css
+++ b/Css/index.css
@@ -157,12 +157,6 @@ footer {
   font-size: 10px;
 }
 
-footer a {
-  /* remove link stylings */
-  color: inherit;
-  text-decoration: inherit;
-}
-
 .intro-box {
   /* configure text gradiant */
   background-color: #EAEBED;
@@ -227,6 +221,12 @@ footer a {
   padding-right: 150px;
 }
 
+.body-box a {
+  /* remove link stylings */
+  color: inherit;
+  text-decoration:line-through
+}
+
 /* **********
   BIO
 ********** */
@@ -259,7 +259,8 @@ footer a {
   font-size: 50px;
 }
 
-.education-list li{
+.education-list li {
+ font-size: 20px;
  margin: 10px 10px 10px 150px;
 }
 
@@ -289,9 +290,10 @@ footer a {
 
 #references {
   border-collapse: collapse;
-  font-size: 15px;
+  font-size: 20px;
   max-width: 600px;
   margin-left: 150px;
+  text-align: center;
 }
 
 #references td, #references th {
@@ -304,7 +306,6 @@ footer a {
 #references th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: left;
   background-color: rgb(92, 163, 250, 0.7);
   color: white;
 }
