--- a/Css/index.css
+++ b/Css/index.css
@@ -143,10 +143,6 @@ main  {
   color:#EAEBED;
 }
 
-br {
-  line-height: 3px;
-}
-
 footer {
   display:block;
   position: fixed;
@@ -155,6 +151,12 @@ footer {
   padding-bottom: 10px;
   text-align: center;
   font-size: 10px;
+}
+
+footer a {
+ /* remove link stylings */
+ color: inherit;
+ text-decoration: inherit;
 }
 
 .intro-box {
@@ -222,9 +224,8 @@ footer {
 }
 
 .body-box a {
-  /* remove link stylings */
   color: inherit;
-  text-decoration:line-through
+  text-decoration: inherit;
 }
 
 /* **********
@@ -297,7 +298,7 @@ footer {
 }
 
 #references td, #references th {
-  border: 1px solid #ddd;
+  border: 1px solid #EAEBED;
   padding: 8px;
 }
 
@@ -307,5 +308,89 @@ footer {
   padding-top: 12px;
   padding-bottom: 12px;
   background-color: rgb(92, 163, 250, 0.7);
-  color: white;
+  color: #EAEBED;
+}
+
+
+/* **********
+  SKILLS
+********** */
+
+.skills-box {
+  margin-top: 100px;
+}
+
+.bar-container {
+  width: 100%;
+  background-color: #EAEBED;
+  border-radius: 5px 40px 40px 5px;
+}
+
+.skills {
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #EAEBED;
+  background-color: #2196F3;
+  border-radius: 2px 7px 7px 2px
+}
+
+.skills-container {
+  width: 100%;
+}
+
+.skills-container p {
+	font-size: 10px;
+  padding-left: 20px;
+}
+
+ /* Skills */
+.html {
+	width: 90%;
+    }
+.css {
+	width: 85%;
+    }
+.js {
+	width: 85%;
+    }
+.react {
+	width: 80%;
+    }
+.node {
+  width: 60%;
+}
+.sql {
+  width: 85%;
+}
+.express {
+  width: 70%;
+}
+.wordpress {
+  width: 80%;
+}
+.photoshop {
+  width: 65%;
+}
+.writing {
+  width: 90%;
+}
+
+.skill-set {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 50px;
+
+  background-color: #01152C;
+}
+
+.skill-description {
+  max-width: 600px;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 20px;
+}
+
+.back-end {
+  flex-direction: row-reverse;
 }
